--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "mark-gerarts/auto-mapper-plus": "^1.3",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/framework-extra-bundle": "^5.4",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
+        "symfony/event-dispatcher": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/maker-bundle": "^1.12",
@@ -20,6 +22,7 @@
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer": "4.3.*",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/validator": "4.3.*",
         "symfony/web-server-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
