--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,6 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
@@ -30,3 +29,9 @@ services:
 
     League\Fractal\Manager:
         public: true
+
+    App\EventListener\UserListener:
+        tags:
+            - { name: kernel.event_listener, event: 'App\Event\User\UserRegisteredEvent', method: 'onUserRegistered' }
+        arguments:
+            $mailer: '@swiftmailer.mailer'
