--- a/.env
+++ b/.env
@@ -16,7 +16,22 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=9ffc229053869b74dccf9cf67c4183f4
-DATABASE_URL=172.19.0.2:3306
+#DATABASE_URL=172.19.0.4:3306
+#DATABASE_PWD="zaq1@WSX"
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root:root@172.19.0.3:3306/testerv
+###< doctrine/doctrine-bundle ###
