--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@
 ###< symfony/framework-bundle ###
 
 .idea/
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
