--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "4.3.*",
+        "symfony/css-selector": "4.3.*",
+        "symfony/dom-crawler": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/event-dispatcher": "4.3.*",
         "symfony/flex": "^1.3.1",
@@ -28,6 +30,8 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/phpunit-bridge": "^4.3",
+        "phpunit/phpunit": "^7"
     },
     "config": {
         "preferred-install": {
