--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/event-dispatcher": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/http-client": "4.3.*",
         "symfony/maker-bundle": "^1.12",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
