--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ MAILER_URL=null://localhost
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@172.19.0.3:3306/testerv
+DATABASE_URL=mysql://root:root@mariadb:3306/testerv
 JWT_SECRET_KEY=AAAAAAAAAA
 JWT_PUBLIC_KEY=dwdwd
 JWT_PASSPHRASE=zaq1@WSX
