added posibility to filter crawled links

--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -15,5 +15,7 @@ framework:
         #app: cache.adapter.apcu
 
         # Namespaced pools use the above "app" backend by default
-        #pools:
-            #my.dedicated.cache: ~
+        pools:
+            app:
+                default_lifetime:  604800
+
