--- a/.env
+++ b/.env
@@ -38,3 +38,10 @@ JWT_SECRET_KEY=AAAAAAAAAA
 JWT_PUBLIC_KEY=dwdwd
 JWT_PASSPHRASE=zaq1@WSX
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
