--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -12,3 +12,8 @@ framework:
         routing:
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
+
+        buses:
+            messenger.bus.default:
+                middleware:
+                  - 'App\Middleware\MessageValidatorMiddleware'
