--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/http-client": "4.3.*",
+        "symfony/lock": "4.3.*",
         "symfony/maker-bundle": "^1.12",
         "symfony/messenger": "4.3.*",
         "symfony/monolog-bundle": "^3.5",
