--- a/.env
+++ b/.env
@@ -39,6 +39,8 @@ JWT_PUBLIC_KEY=dwdwd
 JWT_PASSPHRASE=zaq1@WSX
 ###< doctrine/doctrine-bundle ###
 
+REDIS_DEFAULT_DSN=redis://cache
+
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
