--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -9,7 +9,7 @@ framework:
 
         # Redis
         app: cache.adapter.redis
-        default_redis_provider: redis://cache
+        default_redis_provider: '%env(REDIS_DEFAULT_DSN)%'
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
