--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,5 +1,6 @@
 parameters:
     crawled.links.dir: '%kernel.project_dir%/var/'
+    redis.default.dsn: '%env(REDIS_DEFAULT_DSN)%'
 services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
