--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "league/fractal": "^0.18.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "mark-gerarts/auto-mapper-plus": "^1.3",
+        "nelmio/cors-bundle": "^2.0",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/apache-pack": "^1.0",
