Fixed validator middleware, fixed JWT auth, migrate from 4.3 to 4.4

--- a/.env
+++ b/.env
@@ -33,9 +33,9 @@ MAILER_URL=null://localhost
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@mariadb:3306/testerv
-JWT_SECRET_KEY=AAAAAAAAAA
-JWT_PUBLIC_KEY=dwdwd
+DATABASE_URL=mysql://root:root@mariadb:3306/hyperv
+JWT_SECRET_KEY='%kernel.project_dir%/config/jwt/private.pem'
+JWT_PUBLIC_KEY='%kernel.project_dir%/config/jwt/public.pem'
 JWT_PASSPHRASE=zaq1@WSX
 ###< doctrine/doctrine-bundle ###
 
@@ -44,7 +44,7 @@ REDIS_DEFAULT_DSN=redis://cache
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=doctrine://default
+MESSENGER_TRANSPORT_DSN=doctrine://default
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
 
