--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ JWT_PUBLIC_KEY='%kernel.project_dir%/config/jwt/public.pem'
 JWT_PASSPHRASE=zaq1@WSX
 ###< doctrine/doctrine-bundle ###
 
-REDIS_DEFAULT_DSN=redis://cache
+# REDIS_DEFAULT_DSN=redis://cache
 
 ###> symfony/messenger ###
 # Choose one of the transports below
@@ -51,3 +51,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=9d8aacededcf868b852b6f40fecc719b
+###< lexik/jwt-authentication-bundle ###
